--- a/dossier-main/pom.xml
+++ b/dossier-main/pom.xml
@@ -58,5 +58,17 @@
           <version>5.2.5</version>
           <scope>compile</scope>
       </dependency>
+    <dependency>
+      <groupId>org.apache.poi</groupId>
+      <artifactId>poi-ooxml-lite</artifactId>
+      <version>5.2.5</version>
+      <scope>compile</scope>
+    </dependency>
+      <dependency>
+          <groupId>org.apache.poi</groupId>
+          <artifactId>poi-ooxml-lite</artifactId>
+          <version>5.2.5</version>
+          <scope>compile</scope>
+      </dependency>
   </dependencies>
 </project>
