--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
-#target/
-#logs/
+target/
+logs/
 
 ### STS ###
 .apt_generated
@@ -10,11 +10,11 @@
 .springBeans
 .sts4-cache
 
-### IntelliJ IDEA ###
-#.idea
-#*.iws
-#*.iml
-#*.ipr
+## IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
 ### NetBeans ###
 /nbproject/private/
