--- a/dossier-vizual/pom.xml
+++ b/dossier-vizual/pom.xml
@@ -21,6 +21,11 @@
             <version>0.0.1-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-neo4j</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 
 </project>
