--- a/dossier-app/src/main/resources/application.properties
+++ b/dossier-app/src/main/resources/application.properties
@@ -44,7 +44,7 @@ spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 #spring.neo4j2.authentication.username=neo4j
 #spring.neo4j2.authentication.password=afmdpar
 
-spring.datasource.main.url=jdbc:postgresql://10.16.72.74:5432/amigo
+spring.datasource.main.url=jdbc:postgresql://192.168.122.121:5432/amigo2
 spring.datasource.main.username=postgres
 spring.datasource.main.password=123
 spring.datasource.main.driver=org.hibernate.dialect.PostgreSQLDialect
